processed/gerrit/txt/64381.txt
Change:     64381
Subject:    LU-6142 utils: Fix compile warning in lfs_project
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/64381
Change-Id:  Ic09e5a70e9651ea6855d297c83932755a44e848e
Project:    fs/lustre-release
Branch:     master
Status:     NEW
Owner:      Arshad Hussain
Created:    2026-03-05 11:02:16.000000000
Updated:    2026-04-25 07:58:48.000000000
Patch Set:  1
Insertions: +2
Deletions:  -4
Comments:   5 (0 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +1; Chakshu Kansal: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Andreas Dilger, James Simmons, Shaun Tancheff, Timothy Day, Chakshu Kansal

--- Commit Message ---
LU-6142 utils: Fix compile warning in lfs_project

In strncpy(), providing size less than destination
will leave last byte untouch. This is what the
compiler is complaining about. Since, strncpy()
gurantees NUL termination for anyting after length
of source. The correct usage is to provide the
full length of destination.

$ uname -r
6.12.0-124.20.1.el10_1.x86_64

$ gcc --version
gcc (GCC) 14.3.1 20250617

lfs_project.c: In function ‘project_clear_one’:
lfs_project.c:258:17: error: ‘strncpy’ output may be truncated copying 255 bytes from a string of length 255 [-Werror=stringop-truncation]
  258 |                 strncpy(lp.project_name, bname, NAME_MAX);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lfs_project.c: In function ‘project_set_one’:
lfs_project.c:219:17: error: ‘strncpy’ output may be truncated copying 255 bytes from a string of length 255 [-Werror=stringop-truncation]
  219 |                 strncpy(lp.project_name, bname, NAME_MAX);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Test-Parameters: trivial
Signed-off-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Change-Id: Ic09e5a70e9651ea6855d297c83932755a44e848e

--- Review History ---

--- Message (Arshad Hussain, 2026-03-05 11:02:16.000000000) ---
Uploaded patch set 1.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-03-05 11:05:05.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2026-03-05 11:10:38.000000000) ---
Patch Set 1:

(2 comments)

2 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (jenkins, 2026-03-05 11:29:56.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/122124/ : SUCCESS

--- Message (Arshad Hussain, 2026-03-23 10:00:03.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Andreas Dilger, 2026-03-25 11:22:57.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2026-03-30 23:38:14.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Chakshu Kansal, 2026-04-25 07:58:48.000000000) ---
Patch Set 1: Code-Review+1
